<resources>
    <string name="app_name">BasicKotlin</string>
    <string name="btn_txt">Obapn meka</string>
    <string name="image_loading">Image loading</string>
    <string name="food_list">Food List</string>
    <string name="add_food">Add Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_food_name">Enter Food Name</string>
    <string name="download_image">Download Image</string>
    <string name="enter_food_description">Enter food description</string>
    <string name="pick_image">Pick Image</string>
    <string name="delete_food">Delete Food</string>
    <string name="edit_food">Edit Food</string>
</resources>