<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.fragment.AddFoodFragment" >
    <EditText
        android:id="@+id/editTextFoodName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_food_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_food_description"
        android:inputType="text" />

    <ImageView
        android:id="@+id/imageViewFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        android:contentDescription="@string/image_loading" />

    <Button
        android:id="@+id/buttonPickImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_image" />

    <Button
        android:id="@+id/buttonAddFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_food" />
</LinearLayout>